# app-django-summernote

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: forms.py  models.py  settings.py  urls.py  views.py
