[tool.poetry]
name = "app-django-summernote"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app_django_summernote"}]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.5.2"
backports-zoneinfo = {version = "0.2.1", markers = "python_version < \"3.9\""}
bleach = "5.0.0"
django = "4.0.5"
django-summernote = "0.8.20.0"
six = "1.16.0"
sqlparse = "0.4.2"
webencodings = "0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
